--- a/app/views/web/ost/winners.html.erb
+++ b/app/views/web/ost/winners.html.erb
@@ -2,4 +2,9 @@
 <%= render :partial => "/web/ost/winners/jumbotron" %>
 <%= render :partial => "/web/ost/winners/news_carousel" %>
 <%= render :partial => "/web/ost/winners/twitter_feed" %>
+<%= render :partial => "/web/ost/winners/poc_videos" %>
 <%= render :partial => "/web/ost/winners/subscribe" %>
+<%= render :partial => "/shared/web/modals/help_video" %>
+
+
+
