side by side and twitter

--- a/app/assets/stylesheets/web/ost-winners.css
+++ b/app/assets/stylesheets/web/ost-winners.css
@@ -5,6 +5,6 @@
  *= require web/ost/winners/Signup
  *= require web/ost/winners/Twitter
  *= require web/ost/winners/Jumbotron
-
+ *= require web/ost/winners/Side_by_side
  */
 
