--- a/app/views/web/ost/winners/_jumbotron.erb
+++ b/app/views/web/ost/winners/_jumbotron.erb
@@ -3,7 +3,7 @@
     <div class="row align-items-center">
 
       <div class="col-md-12 col-lg-6">
-        <h2>OST KITa: Phase II: Developer Proof of Concept Challenge</h2>
+        <h3 class="font-weight-bold">OST KITa: Phase II: Developer Proof of Concept Challenge</h3>
         <p class="mt-3">
           OST KYC is the first plug-and-play KYC/AML management solution for token sales. Process thousands of applicants smoothly and securely. Developed for the Simple Token "OST" ICO. Now available for any company to use.
         </p>
