--- a/app/views/web/ost/winners/_twitter_feed.erb
+++ b/app/views/web/ost/winners/_twitter_feed.erb
@@ -1,57 +1,60 @@
 <section class="container-fluid container-twitter py-5">
   <div class="row">
     <div class="col-12 px-5">
+      <%
+        twitter_users = [{
+                             desc: "1 Aristotle maintained the sharp distinction between science and the practical knowledge of artisans, treating theoretical speculation as the highest type of human activity, practical thinking about good",
+                             handle:"@john",
+                             profile: "https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&h=650&w=940",
+                             link:"https://twitter.com"
+
+                         },
+                         {
+                             desc: "2 Aristotle maintained the sharp distinction between science and the practical knowledge of artisans, treating theoretical speculation as the highest type of human activity, practical thinking about good",
+                             handle:"@ben",
+                             profile: "https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&h=650&w=940",
+                             link:"https://twitter.com"
+
+                         },
+                         {
+                             desc: "3 Aristotle maintained the sharp distinction between science and the practical knowledge of artisans, treating theoretical speculation as the highest type of human activity, practical thinking about good",
+                             handle:"@bell",
+                             profile: "https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&h=650&w=940",
+                             link:"https://twitter.com"
+
+                         },
+                         {
+                             desc: "4 Aristotle maintained the sharp distinction between science and the practical knowledge of artisans, treating theoretical speculation as the highest type of human activity, practical thinking about good",
+                             handle:"@handle123",
+                             profile: "https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&h=650&w=940",
+                             link:"https://twitter.com"
+
+                         },
+                         {
+                             desc: "5 Aristotle maintained the sharp distinction between science and the practical knowledge of artisans, treating theoretical speculation as the highest type of human activity, practical thinking about good",
+                             handle:"@realme",
+                             profile: "https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&h=650&w=940",
+                             link:"https://twitter.com"
+
+                         },
+                         {
+                             desc: "6 Aristotle maintained the sharp distinction between science and the practical knowledge of artisans, treating theoretical speculation as the highest type of human activity, practical thinking about good",
+                             handle:"@scd",
+                             profile: "https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&h=650&w=940",
+                             link:"https://twitter.com"
+
+                         },
+        ]
+
+      %>
+      <div class="twitter-desc"><%= twitter_users[0][:desc] %></div>
       <div class="twitter-carousel with-placeholder container">
 
-          <%
-            twitter_users = [{
-                              desc: "Aristotle maintained the sharp distinction between science and the practical knowledge of artisans, treating theoretical speculation as the highest type of human activity, practical thinking about good",
-                              handle:"@john",
-                              profile: "https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&h=650&w=940",
-                              link:"https://twitter.com"
 
-                             },
-                             {
-                                 desc: "Aristotle maintained the sharp distinction between science and the practical knowledge of artisans, treating theoretical speculation as the highest type of human activity, practical thinking about good",
-                                 handle:"@ben",
-                                 profile: "https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&h=650&w=940",
-                                 link:"https://twitter.com"
 
-                             },
-                             {
-                                 desc: "Aristotle maintained the sharp distinction between science and the practical knowledge of artisans, treating theoretical speculation as the highest type of human activity, practical thinking about good",
-                                 handle:"@bell",
-                                 profile: "https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&h=650&w=940",
-                                 link:"https://twitter.com"
-
-                             },
-                             {
-                                 desc: "Aristotle maintained the sharp distinction between science and the practical knowledge of artisans, treating theoretical speculation as the highest type of human activity, practical thinking about good",
-                                 handle:"@handle123",
-                                 profile: "https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&h=650&w=940",
-                                 link:"https://twitter.com"
-
-                             },
-                             {
-                                 desc: "Aristotle maintained the sharp distinction between science and the practical knowledge of artisans, treating theoretical speculation as the highest type of human activity, practical thinking about good",
-                                 handle:"@realme",
-                                 profile: "https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&h=650&w=940",
-                                 link:"https://twitter.com"
-
-                             },
-                             {
-                                 desc: "Aristotle maintained the sharp distinction between science and the practical knowledge of artisans, treating theoretical speculation as the highest type of human activity, practical thinking about good",
-                                 handle:"@scd",
-                                 profile: "https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&h=650&w=940",
-                                 link:"https://twitter.com"
-
-                             },
-                             ]
-
-          %>
           <% twitter_users.each_with_index do |member, index| %>
             <div class="carousel-item text-center align-self-center">
-              <div><%= member[:desc] %></div>
+              <div class="hidden-desc d-none"><%= member[:desc] %></div>
               <a  href="<%= member[:link] %>" target="_blank" class="disabled twitter-link">
                 <img class="twitter-user-img mx-auto" src="<%= member[:profile] %>"  />
                 <span class="twitter-handle mt-2"><%= member[:handle] %></span>
