--- a/app/views/web/ost/winners/_side_by_side.erb
+++ b/app/views/web/ost/winners/_side_by_side.erb
@@ -11,9 +11,10 @@
     <div class="container">
       <h3 class="mb-4">The Grand Winner: kidtoken</h3>
       <div class="row">
-        <div class="col-12 col-md-7">
-          <div class="">
-            <img src="video-image@3x.png" class="img-fluid" alt="OST - Design Your Token" title=""/>
+        <div class="col-12 col-md-7 play-video">
+          <img src="video-image@3x.png" class="img-fluid video-image" alt="OST - Design Your Token" title="" />
+          <div class="embed-responsive embed-responsive-16by9 video-iframe" hidden>
+            <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed/cFXGRjS8tEQ?loop=1&showinfo=0&enablejsapi=1&autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </div>
         <div class="col-12 col-md-5">
@@ -34,9 +35,10 @@
           <p>It is a good idea to think of your PC as an office. It stores files, programs, pictures. This can be compared to an actual office’s files, machines and decorations. The operating system is the boss. With this image in mind, think of an office you’ve visited that was slow and inefficient. There were probably many different reasons for the inefficiency. This is the same with a computer.  There can be many items that slow down your computer. Perhaps the one most commonly overlooked is disorganization and clutter.</p>
           <a href="" class="link" target="_blank" title="CHECK THE PROJECT HERE">CHECK THE PROJECT HERE</a>
         </div>
-        <div class="col-12 col-md-7">
-          <div class="">
-            <img src="video-image@3x.png" class="img-fluid" alt="OST - Design Your Token" title=""/>
+        <div class="col-12 col-md-7 play-video">
+          <img src="video-image@3x.png" class="img-fluid video-image" alt="OST - Design Your Token" title="" />
+          <div class="embed-responsive embed-responsive-16by9 video-iframe" hidden>
+            <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed/cFXGRjS8tEQ?loop=1&showinfo=0&enablejsapi=1&autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </div>
       </div>
@@ -47,9 +49,10 @@
     <div class="container">
       <h3 class="mb-4">The Grand Winner: kidtoken</h3>
       <div class="row">
-        <div class="col-12 col-md-7">
-          <div class="">
-            <img src="video-image@3x.png" class="img-fluid" alt="OST - Design Your Token" title=""/>
+        <div class="col-12 col-md-7 play-video">
+          <img src="video-image@3x.png" class="img-fluid video-image" alt="OST - Design Your Token" title="" />
+          <div class="embed-responsive embed-responsive-16by9 video-iframe" hidden>
+            <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed/cFXGRjS8tEQ?loop=1&showinfo=0&enablejsapi=1&autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </div>
         <div class="col-12 col-md-5">
@@ -70,9 +73,10 @@
           <p>It is a good idea to think of your PC as an office. It stores files, programs, pictures. This can be compared to an actual office’s files, machines and decorations. The operating system is the boss. With this image in mind, think of an office you’ve visited that was slow and inefficient. There were probably many different reasons for the inefficiency. This is the same with a computer.  There can be many items that slow down your computer. Perhaps the one most commonly overlooked is disorganization and clutter.</p>
           <a href="" class="link" target="_blank" title="CHECK THE PROJECT HERE">CHECK THE PROJECT HERE</a>
         </div>
-        <div class="col-12 col-md-7">
-          <div class="">
-            <img src="video-image@3x.png" class="img-fluid" alt="OST - Design Your Token" title=""/>
+        <div class="col-12 col-md-7 play-video">
+          <img src="video-image@3x.png" class="img-fluid video-image" alt="OST - Design Your Token" title="" />
+          <div class="embed-responsive embed-responsive-16by9 video-iframe" hidden>
+            <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed/cFXGRjS8tEQ?loop=1&showinfo=0&enablejsapi=1&autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </div>
       </div>
@@ -83,9 +87,10 @@
     <div class="container">
       <h3 class="mb-4">The Grand Winner: kidtoken</h3>
       <div class="row">
-        <div class="col-12 col-md-7">
-          <div class="">
-            <img src="video-image@3x.png" class="img-fluid" alt="OST - Design Your Token" title=""/>
+        <div class="col-12 col-md-7 play-video">
+          <img src="video-image@3x.png" class="img-fluid video-image" alt="OST - Design Your Token" title="" />
+          <div class="embed-responsive embed-responsive-16by9 video-iframe" hidden>
+            <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed/cFXGRjS8tEQ?loop=1&showinfo=0&enablejsapi=1&autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </div>
         <div class="col-12 col-md-5">
