--- a/app/views/web/ost/winners/_side_by_side.erb
+++ b/app/views/web/ost/winners/_side_by_side.erb
@@ -12,7 +12,16 @@
       <h3 class="mb-4">The Grand Winner: kidtoken</h3>
       <div class="row">
         <div class="col-12 col-md-7 play-video">
-          <img src="video-image@3x.png" class="img-fluid video-image" alt="OST - Design Your Token" title="" />
+          <div class="video-image">
+            <img src="video-image@3x.png" class="img-fluid position-relative" alt="OST - Design Your Token" title="" />
+            <div class="play">
+              <svg class="svg-play">
+                <switch>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-play"></use>
+                </switch>
+              </svg>
+            </div>
+          </div>
           <div class="embed-responsive embed-responsive-16by9 video-iframe" hidden>
             <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed/cFXGRjS8tEQ?loop=1&showinfo=0&enablejsapi=1&autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
@@ -36,7 +45,16 @@
           <a href="" class="link" target="_blank" title="CHECK THE PROJECT HERE">CHECK THE PROJECT HERE</a>
         </div>
         <div class="col-12 col-md-7 play-video">
-          <img src="video-image@3x.png" class="img-fluid video-image" alt="OST - Design Your Token" title="" />
+          <div class="video-image">
+            <img src="video-image@3x.png" class="img-fluid position-relative" alt="OST - Design Your Token" title="" />
+            <div class="play">
+              <svg class="svg-play">
+                <switch>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-play"></use>
+                </switch>
+              </svg>
+            </div>
+          </div>
           <div class="embed-responsive embed-responsive-16by9 video-iframe" hidden>
             <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed/cFXGRjS8tEQ?loop=1&showinfo=0&enablejsapi=1&autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
@@ -50,7 +68,16 @@
       <h3 class="mb-4">The Grand Winner: kidtoken</h3>
       <div class="row">
         <div class="col-12 col-md-7 play-video">
-          <img src="video-image@3x.png" class="img-fluid video-image" alt="OST - Design Your Token" title="" />
+          <div class="video-image">
+            <img src="video-image@3x.png" class="img-fluid position-relative" alt="OST - Design Your Token" title="" />
+            <div class="play">
+              <svg class="svg-play">
+                <switch>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-play"></use>
+                </switch>
+              </svg>
+            </div>
+          </div>
           <div class="embed-responsive embed-responsive-16by9 video-iframe" hidden>
             <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed/cFXGRjS8tEQ?loop=1&showinfo=0&enablejsapi=1&autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
@@ -74,7 +101,16 @@
           <a href="" class="link" target="_blank" title="CHECK THE PROJECT HERE">CHECK THE PROJECT HERE</a>
         </div>
         <div class="col-12 col-md-7 play-video">
-          <img src="video-image@3x.png" class="img-fluid video-image" alt="OST - Design Your Token" title="" />
+          <div class="video-image">
+            <img src="video-image@3x.png" class="img-fluid position-relative" alt="OST - Design Your Token" title="" />
+            <div class="play">
+              <svg class="svg-play">
+                <switch>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-play"></use>
+                </switch>
+              </svg>
+            </div>
+          </div>
           <div class="embed-responsive embed-responsive-16by9 video-iframe" hidden>
             <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed/cFXGRjS8tEQ?loop=1&showinfo=0&enablejsapi=1&autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
@@ -88,7 +124,16 @@
       <h3 class="mb-4">The Grand Winner: kidtoken</h3>
       <div class="row">
         <div class="col-12 col-md-7 play-video">
-          <img src="video-image@3x.png" class="img-fluid video-image" alt="OST - Design Your Token" title="" />
+          <div class="video-image">
+            <img src="video-image@3x.png" class="img-fluid position-relative" alt="OST - Design Your Token" title="" />
+            <div class="play">
+              <svg class="svg-play">
+                <switch>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-play"></use>
+                </switch>
+              </svg>
+            </div>
+          </div>
           <div class="embed-responsive embed-responsive-16by9 video-iframe" hidden>
             <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed/cFXGRjS8tEQ?loop=1&showinfo=0&enablejsapi=1&autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
