poc videos and carousel improvements

--- a/app/assets/stylesheets/web/ost-winners.css
+++ b/app/assets/stylesheets/web/ost-winners.css
@@ -6,5 +6,6 @@
  *= require web/ost/winners/Twitter
  *= require web/ost/winners/Jumbotron
  *= require web/ost/winners/Side_by_side
+ *= require web/ost/winners/poc_videos
  */
 
