--- a/app/views/web/ost/winners/_twitter_feed.erb
+++ b/app/views/web/ost/winners/_twitter_feed.erb
@@ -47,8 +47,8 @@
         ]
 
       %>
-      <div class="twitter-desc"><%= twitter_users[0][:desc] %></div>
-      <div class="twitter-carousel with-placeholder container">
+      <div class="twitter-desc active"><%= twitter_users[0][:desc] %></div>
+      <div class="twitter-carousel with-placeholder container mt-3">
 
 
 
