--- a/app/views/shared/web/common/_index_svg_sprite.erb
+++ b/app/views/shared/web/common/_index_svg_sprite.erb
@@ -115,4 +115,13 @@
       </g>
     </g>
   </symbol>
+  <symbol id="video-play-icon" viewBox="0 0 19 26">
+    <g id="Final" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+      <g id="AplhaII_POC-web" transform="translate(-479.000000, -1455.000000)" fill="#34445B">
+        <g id="Group-39" transform="translate(165.000000, 1207.000000)">
+          <path d="M315.580432,248.185691 L332.407376,260.179776 C332.857106,260.50034 332.961816,261.124787 332.641253,261.574517 C332.576815,261.664919 332.497775,261.743959 332.407373,261.808396 L315.580429,273.8024 C315.130698,274.122963 314.506251,274.01825 314.185689,273.568519 C314.064911,273.399074 314,273.196173 314,272.98809 L314,249 C314,248.447715 314.447715,248 315,248 C315.208085,248 315.410986,248.064912 315.580432,248.185691 Z" id="Rectangle"></path>
+        </g>
+      </g>
+    </g>
+  </symbol>
 </svg>
