--- a/app/views/web/ost/winners/_side_by_side.erb
+++ b/app/views/web/ost/winners/_side_by_side.erb
@@ -72,15 +72,33 @@
         <div class="col-12 col-md-5">
           <p>It is a good idea to think of your PC as an office. It stores files, programs, pictures. This can be compared to an actual office’s files, machines and decorations. The operating system is the boss. With this image in mind, think of an office you’ve visited that was slow and inefficient. There were probably many different reasons for the inefficiency. This is the same with a computer.  There can be many items that slow down your computer. Perhaps the one most commonly overlooked is disorganization and clutter.</p>
           <a href="" class="link" target="_blank" title="CHECK THE PROJECT HERE">CHECK THE PROJECT HERE</a>
-          <div class="participants-container sky-blue">
+          <div class="participants-container blue">
             <div>PARTICIPANTS</div>
             <div class="participants-carousel">
-              <div class="item">Kevin Estrada<br/>CEO</div>
-              <div class="item">Kevin Estrada<br/>CEO</div>
-              <div class="item">Kevin Estrada<br/>CEO</div>
-              <div class="item">Kevin Estrada<br/>CEO</div>
-              <div class="item">Kevin Estrada<br/>CEO</div>
-              <div class="item">Kevin Estrada<br/>CEO</div>
+              <div class="item">
+                <div>Kevin Estrada</div>
+                <small class="font-weight-light">CEO</small>
+              </div>
+              <div class="item">
+                <div>Kevin Estrada</div>
+                <small class="font-weight-light">CEO</small>
+              </div>
+              <div class="item">
+                <div>Kevin Estrada</div>
+                <small class="font-weight-light">CEO</small>
+              </div>
+              <div class="item">
+                <div>Kevin Estrada</div>
+                <small class="font-weight-light">CEO</small>
+              </div>
+              <div class="item">
+                <div>Kevin Estrada</div>
+                <small class="font-weight-light">CEO</small>
+              </div>
+              <div class="item">
+                <div>Kevin Estrada</div>
+                <small class="font-weight-light">CEO</small>
+              </div>
             </div>
           </div>
         </div>
