--- a/app/views/web/ost/winners/_jumbotron.erb
+++ b/app/views/web/ost/winners/_jumbotron.erb
@@ -1,4 +1,4 @@
-<section class="container-jumbotron pt-5">
+<section class="container-jumbotron py-5">
   <div class="container">
     <div class="row align-items-center">
 
@@ -14,7 +14,7 @@
 
       <div class="col-md-12 col-lg-6 text-center mt-3 mt-md-0">
         <div class="illustration w-100">
-          <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-hero-illustration-1x.png" srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-hero-illustration-2x.png 1000w" class="img-fluid position-relative" alt="Simple Token Play Video"/>
+          <img src="ost-winners-hero-illustration-2x.png" srcset="" class="img-fluid position-relative" alt="Simple Token Play Video"/>
         </div>
       </div>
 
