--- a/app/assets/stylesheets/web/ost-winners.css
+++ b/app/assets/stylesheets/web/ost-winners.css
@@ -7,5 +7,6 @@
  *= require web/ost/winners/Jumbotron
  *= require web/ost/winners/Side_by_side
  *= require web/ost/winners/poc_videos
+ *= require web/ost/winners/Stats
  */
 
