--- a/app/assets/stylesheets/web/ost/winners/Stats.scss
+++ b/app/assets/stylesheets/web/ost/winners/Stats.scss
@@ -3,4 +3,14 @@
 
 .container-stats {
   background-color: $banana;
+  .stats-value{
+    margin: 0;
+    color: $white;
+    font-size: 1.6rem;
+    font-weight: $font-weight-bold;
+  }
+  .stats-desc{
+    color: $yellow-300;
+    font-weight: $font-weight-light;
+  }
 }
