--- a/app/views/web/ost/winners/_subscribe.erb
+++ b/app/views/web/ost/winners/_subscribe.erb
@@ -82,7 +82,7 @@
             <div class="g-recaptcha form-recapcha-wrap" data-sitekey="<%= GlobalConstant::Base.recaptcha['site_key'] %>"></div>
             <div class="error" data-for="recaptcha" style="text-align: center"></div>
           </div>
-          <button type="submit" class="btn btn-primary" id="partners-contact-us-submit" style="margin: 0 auto;display: block;" title="Sign Up">Sign Up</button>
+          <button type="submit" class="btn btn-primary" id="sign-up-form-submit" style="margin: 0 auto;display: block;" title="Sign Up">Sign Up</button>
           <div class="error text-center" data-for="general_error"></div>
         </form>
 
