--- a/app/views/web/ost/team/_team.erb
+++ b/app/views/web/ost/team/_team.erb
@@ -209,7 +209,7 @@
                             },
                             {
                                 name: "Puneet Khushwani",
-                                title: "Senior Software Engineer",
+                                title: "Principal Software Engineer",
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Puneet-Khushwani.png",
                                 linkedIn: 'https://www.linkedin.com/in/puneet-khushwani-01012726/',
                                 description: "Puneet graduated from Birla Institute Of Technology & Science, Pilani Campus with a bachelor's degree in InformationSystems in May, 2013. He is currently working as a Senior Software Developer with Pepo. Specialties: Ruby On Rails"
