--- a/app/views/web/ost/winners/_subscribe.erb
+++ b/app/views/web/ost/winners/_subscribe.erb
@@ -37,10 +37,10 @@
 
           <div class="input-container">
             <label>COMPANY NAME / PROJECT NAME</label>
-            <input class="input" id="full_name" type="text" name="company_name" value="" title="Company Name" required autocomplete="off" />
+            <input class="input" id="company_name" type="text" name="company_name" value="" title="Company Name" required autocomplete="off" />
             <span class="input-border"></span>
           </div>
-          <div class="error" data-for="full_name"></div>
+          <div class="error" data-for="company_name"></div>
 
           <div class="form-group mb-0">
             <label class="mb-0 d-block">SHORT PROJECT DESCRIPTION & COMMENTS</label>
