--- a/app/views/web/ost/winners/_stats.erb
+++ b/app/views/web/ost/winners/_stats.erb
@@ -9,7 +9,7 @@
               </switch>
             </svg>
             <div class="d-inline-block align-middle">
-              <h4 class="stats-value">250</h4>
+              <h4 class="stats-value" id="d1">250</h4>
               <small class="stats-desc">APPLICATIONS</small>
             </div>
         </div>
@@ -20,7 +20,7 @@
             </switch>
           </svg>
             <div class="d-inline-block align-middle">
-              <h4 class="stats-value">143</h4>
+              <h4 class="stats-value" id="d2">143</h4>
               <small class="stats-desc">ACCEPTED</small>
             </div>
         </div>
@@ -31,7 +31,7 @@
             </switch>
           </svg>
           <div class="d-inline-block align-middle">
-            <h4 class="stats-value">100</h4>
+            <h4 class="stats-value" id="d3">100</h4>
             <small class="stats-desc">DAYS</small>
           </div>
         </div>
@@ -42,7 +42,7 @@
             </switch>
           </svg>
           <div class="d-inline-block align-middle">
-            <h4 class="stats-value">50</h4>
+            <h4 class="stats-value" id="d4">50</h4>
             <small class="stats-desc">SUCCESSFUL POCs</small>
           </div>
         </div>
@@ -56,7 +56,7 @@
             </switch>
           </svg>
           <div class="d-inline-block align-middle">
-            <h4 class="stats-value">5,000,000 OST</h4>
+            <h4 class="stats-value" id="d5">5,000,000 OST</h4>
             <small class="stats-desc">AWARDED IN TOTAL</small>
           </div>
         </div>
@@ -67,7 +67,7 @@
             </switch>
           </svg>
           <div class="d-inline-block align-middle">
-            <h4 class="stats-value">250,000 OST</h4>
+            <h4 class="stats-value" id="d6">250,000 OST</h4>
             <small class="stats-desc">FOR GRAND WINNER POC</small>
           </div>
         </div>
@@ -78,7 +78,7 @@
             </switch>
           </svg>
           <div class="d-inline-block align-middle">
-            <h4 class="stats-value">75,000 OST</h4>
+            <h4 class="stats-value" id="d7">75,000 OST</h4>
             <small class="stats-desc">FOR SPECIAL RECOGNITION</small>
           </div>
         </div>
@@ -89,7 +89,7 @@
             </switch>
           </svg>
           <div class="d-inline-block align-middle">
-            <h4 class="stats-value">50,000 OST</h4>
+            <h4 class="stats-value" id="d8">50,000 OST</h4>
             <small class="stats-desc">PER SUCCESSFUL POC</small>
           </div>
         </div>
